--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -49,3 +49,10 @@ input:-webkit-autofill:focus {
   display: inline-block;
   vertical-align: middle;
 }
+
+.titleIcon {
+  display: inline;
+  margin-right: 10px;
+  position: relative;
+  top: 0.0em;
+}
