--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -62,3 +62,26 @@ input:-webkit-autofill:focus {
   cursor: -webkit-zoom-in;
   cursor: zoom-in;
 }
+
+figcaption {
+  background-color:#505050;
+  font-style: italic;
+  color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
+  display: table-caption;
+  caption-side: bottom;
+}
+
+figure {
+  display: table;
+  margin-bottom: 0px !important;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-left: auto;
+  margin-right: auto;
+}
